syntax = "proto3";

message Pos3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message PlayerData {
  int32 id = 1;
  string name = 2;
  Pos3 position = 3;
}

message AllPlayerData {
  map<int32,PlayerData> allPlayerData = 1;
}